objects/ASI_CRM_Quality__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_MY_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Brand-Quality</relationshipLabel>
        <relationshipName>Brand_Quality</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Brand-Quality</relationshipLabel>
        <relationshipName>Brand_Quality</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Category__c</fullName>
        <formula>ASI_CRM_SG_Brand__r.ASI_HK_CRM_Product_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Equivalent_Factor__c</fullName>
        <label>Equivalent Factor</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Quality_Code__c</fullName>
        <label>Quality Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Quality_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Quality_Is_Competitor__c</fullName>
        <formula>ASI_CRM_SG_Brand__r.ASI_CRM_CN_Competitor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Super Premium</fullName>
                </value>
                <value>
                    <fullName>Ultra Premium</fullName>
                </value>
                <value>
                    <fullName>Prestige</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Brand-Quality</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Category__c</columns>
        <columns>ASI_CRM_SG_Quality_Is_Competitor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_My_Brand_Quality</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Category__c</columns>
        <columns>ASI_CRM_SG_Quality_Is_Competitor__c</columns>
        <columns>ASI_CRM_MY_Price__c</columns>
        <columns>ASI_CRM_SG_Brand__c</columns>
        <columns>ASI_CRM_MY_Sub_brand__c</columns>
        <columns>ASI_CRM_SG_Sub_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Quality__c.ASI_CRM_MY_Brand_Quality</value>
        </filters>
        <label>All MY Brand Quality</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_MY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Brand Quality Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand-Quality</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Brand_Quality</fullName>
        <active>true</active>
        <label>ASI CRM MY Brand Quality</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Brand_Quality</fullName>
        <active>true</active>
        <label>ASI CRM SG Brand Quality</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Brand_Quality</fullName>
        <active>true</active>
        <label>ASI CRM TH Brand Quality</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Brand_Quality</fullName>
        <active>true</active>
        <label>ASI CRM TW Brand-Quality</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>